## Process this file with automake to produce Makefile.in

all: PhotoshopActions.exe

GIMPSHARPLIB = $(top_builddir)/lib/gimp-sharp.dll

ASSEMBLIES = -r:$(GIMPSHARPLIB) /pkg:gtk-sharp-2.0 /target:winexe

MYSOURCES = 				\
	Abbreviations.cs		\
	AccentedEdgesEvent.cs		\
	Action.cs			\
	ActionEvent.cs			\
	ActionParser.cs			\
	ActionSet.cs			\
	AdaptCorrectEvent.cs		\
	AddEvent.cs			\
	AddAdjustmentLayerEvent.cs	\
	AddGuideEvent.cs		\
	AddLayerEvent.cs		\
	AddMaskEvent.cs			\
	AddNoiseEvent.cs		\
	AddTextLayerEvent.cs		\
	AddToEvent.cs			\
	AliasParameter.cs		\
	AlignEvent.cs			\
	AngledStrokesEvent.cs		\
	ApplyImageEvent.cs		\
	ApplyStyleEvent.cs		\
	AverageEvent.cs			\
	BasReliefEvent.cs		\
	BlurEvent.cs			\
	BlurMethodEvent.cs		\
	BoolParameter.cs		\
	BorderEvent.cs			\
	BrightnessEvent.cs		\
	CanvasSizeEvent.cs		\
	ChalkCharcoalEvent.cs		\
	ChannelMixerEvent.cs		\
	ChromeEvent.cs			\
	ClassType.cs			\
	ClearEffectsEvent.cs		\
	ClearEvent.cs			\
	ClearQuickMaskEvent.cs		\
	CloseEvent.cs			\
	CloudsEvent.cs			\
	ColorBalanceEvent.cs		\
	ColorHalftoneEvent.cs		\
	ColorPaletteEvent.cs		\
	ColorRangeEvent.cs		\
	ContractEvent.cs		\
	ConvertModeEvent.cs		\
	CopyEffectsEvent.cs		\
	CopyEvent.cs			\
	CopyMergedEvent.cs		\
	CopyToLayerEvent.cs		\
	CraquelureEvent.cs		\
	CropEvent.cs			\
	CrosshatchEvent.cs		\
	CrystallizeEvent.cs		\
	CurvesEvent.cs			\
	CutEvent.cs			\
	CutoutEvent.cs			\
	CutToLayerEvent.cs		\
	DarkStrokesEvent.cs		\
	DebugOutput.cs			\
	DefinePatternEvent.cs		\
	DeInterlaceEvent.cs		\
	DeleteChannelEvent.cs		\
	DeleteEvent.cs			\
	DeleteGuideEvent.cs		\
	DeleteChannelByNameEvent.cs	\
	DeleteLayerByNameEvent.cs	\
	DeleteLayerEvent.cs		\
	DesaturateEvent.cs		\
	DeselectEvent.cs		\
	DespeckleEvent.cs		\
	DiffuseEvent.cs			\
	DiffuseGlowEvent.cs		\
	DisplaceEvent.cs		\
	DoubleParameter.cs		\
	DifferenceCloudsEvent.cs	\
	DrawEvent.cs			\
	DryBrushEvent.cs		\
	DuplicateChannelEvent.cs	\
	DuplicateEvent.cs		\
	DuplicateDocumentEvent.cs	\
	DuplicateChannelByNameEvent.cs	\
	DuplicateLayerByNameEvent.cs	\
	DuplicateLayerEvent.cs		\
	DuplicateSelectionEvent.cs	\
	DustAndScratchesEvent.cs	\
	EmbossEvent.cs			\
	EnmrType.cs			\
	EnumParameter.cs		\
	EqualizeEvent.cs		\
	EventMap.cs			\
	ExchangeEvent.cs		\
	ExpandEvent.cs			\
	ExternalPluginEvent.cs		\
	ExtrudeEvent.cs			\
	FacetEvent.cs			\
	FeatherEvent.cs			\
	FadeEvent.cs			\
	FillEvent.cs			\
	FilmGrainEvent.cs		\
	FilterEvent.cs			\
	FilterGalleryEvent.cs		\
	FindEdgesEvent.cs		\
	FlattenImageEvent.cs		\
	FlipEvent.cs			\
	FragmentEvent.cs		\
	GaussianBlurEvent.cs		\
	GlassEvent.cs			\
	GlowingEdgesEvent.cs		\
	GradientClassEvent.cs		\
	GradientMapEvent.cs		\
	GrainEvent.cs			\
	GraphicPenEvent.cs		\
	GroupEvent.cs			\
	GrowEvent.cs			\
	HalftoneScreenEvent.cs		\
	HideChannelEvent.cs		\
	HideEvent.cs			\
	HideLayerEvent.cs		\
	HighPassEvent.cs		\
	HueSaturationEvent.cs		\
	IExecutable.cs			\
	ImageSizeEvent.cs		\
	IndexType.cs			\
	InkOutlinesEvent.cs		\
	IntersectWithEvent.cs		\
	InverseEvent.cs			\
	InvertEvent.cs			\
	LensFlareEvent.cs		\
	LevelsEvent.cs			\
	LightingEffectsEvent.cs		\
	LinkedLayers.cs			\
	LinkedLayersSet.cs		\
	LinkEvent.cs			\
	LinkSelectedLayersEvent.cs	\
	ListParameter.cs		\
	LongParameter.cs		\
	MakeContentLayerEvent.cs	\
	MakeEvent.cs			\
	MakeGroupEvent.cs		\
	MakePathEvent.cs		\
	MakePatternEvent.cs		\
	MakeSnapshotEvent.cs		\
	MaximumEvent.cs			\
	MedianEvent.cs			\
	MergeLayersEvent.cs		\
	MergeLayersNewEvent.cs		\
	MergeVisibleEvent.cs		\
	MezzotintEvent.cs		\
	MinimumEvent.cs			\
	MosaicEvent.cs			\
	MosaicTilesEvent.cs		\
	MosaicPluginEvent.cs		\
	MotionBlurEvent.cs		\
	MoveEvent.cs			\
	MoveLayerByIndexEvent.cs	\
	MoveLayerEvent.cs		\
	MoveOffsetEvent.cs		\
	NameType.cs			\
	NewChannelEvent.cs		\
	NewDocumentEvent.cs		\
	NotePaperEvent.cs		\
	NTSCColorsEvent.cs		\
	ObArParameter.cs		\
	ObjcParameter.cs		\
	OceanRippleEvent.cs		\
	OffsetEvent.cs			\
	OpenEvent.cs			\
	PaintDaubsEvent.cs		\
	PaletteKnifeEvent.cs		\
	Parameter.cs			\
	ParameterAttribute.cs		\
	ParameterSet.cs			\
	PasteEffectsEvent.cs		\
	PasteEvent.cs			\
	PasteIntoEvent.cs		\
	PatchworkEvent.cs		\
	PathParameter.cs		\
	PhotocopyEvent.cs		\
	PhotoFilterEvent.cs		\
	PhotoshopActions.cs		\
	PinchEvent.cs			\
	PlasterEvent.cs			\
	PlasticWrapEvent.cs		\
	PlayEvent.cs			\
	PointillizeEvent.cs		\
	PolarEvent.cs			\
	PosterEdgesEvent.cs		\
	PosterizationEvent.cs		\
	PropertyType.cs			\
	PurgeEvent.cs			\
	RadialBlurEvent.cs		\
	RasterizeAllEvent.cs		\
	RasterizeLayerEvent.cs		\
	RasterizeTypeLayerEvent.cs	\
	RawDataParameter.cs		\
	ReferenceParameter.cs		\
	ReferenceType.cs		\
	ReleType.cs			\
	RemoveWhiteMatteEvent.cs	\
	ReplaceColorEvent.cs		\
	ResetEvent.cs			\
	ReticulationEvent.cs		\
	RevealAllEvent.cs		\
	RevertEvent.cs			\
	RippleEvent.cs			\
	RotateEvent.cs			\
	RoughPastelsEvent.cs		\
	SaveEvent.cs			\
	ScaleEffectsEvent.cs		\
	SelectAllEvent.cs		\
	SelectAllLayersEvent.cs		\
	SelectDocumentEvent.cs		\
	SelectEllipseEvent.cs		\
	SelectEvent.cs			\
	SelectionByIndexEvent.cs	\
	SelectionEvent.cs		\
	SelectionFromChannelEvent.cs	\
	SelectChannelByIndexEvent.cs	\
	SelectChannelByNameEvent.cs	\
	SelectChannelEvent.cs		\
	SelectiveColorEvent.cs		\
	SelectLayerByNameEvent.cs	\
	SelectLayerEvent.cs		\
	SelectMenuItemEvent.cs		\
	SelectNoneEvent.cs		\
	SelectPixelEvent.cs		\
	SelectPolygonEvent.cs		\
	SelectPreviousEvent.cs		\
	SelectRectangleEvent.cs		\
	SelectSingleColumnEvent.cs	\
	SelectSingleRowEvent.cs		\
	SelectSnapshotEvent.cs		\
	SeparationSetupEvent.cs		\
	SetAdjustmentLayerEvent.cs	\
	SetBackgroundColorEvent.cs	\
	SetChannelPropertyEvent.cs	\
	SetChannelToSelectionEvent.cs	\
	SetColorEvent.cs		\
	SetEvent.cs			\
	SetFileInfoEvent.cs		\
	SetForegroundColorEvent.cs	\
	SetHistoryStateEvent.cs		\
	SetLayerEffectsEvent.cs		\
	SetLayerPropertyEvent.cs	\
	SetQuickMaskEvent.cs		\
	SetTextLayerPropertyEvent.cs	\
	SharpenEdgesEvent.cs		\
	SharpenEvent.cs			\
	SharpenMoreEvent.cs		\
	ShearEvent.cs			\
	ShowChannelEvent.cs		\
	ShowEvent.cs			\
	ShowLayerEvent.cs		\
	SimilarEvent.cs			\
	SmartBlurEvent.cs		\
	SmoothnessEvent.cs		\
	SolarizeEvent.cs		\
	SpatterEvent.cs			\
	SpherizeEvent.cs		\
	SpongeEvent.cs			\
	StainedGlassEvent.cs		\
	StampEvent.cs			\
	StopEvent.cs			\
	StrokeEvent.cs			\
	SubtractEvent.cs		\
	SubtractFromEvent.cs		\
	SumieEvent.cs			\
	SurfaceBlurEvent.cs		\
	TextParameter.cs		\
	TexturizerEvent.cs		\
	ThresholdClassEvent.cs		\
	TilesEvent.cs			\
	TornEdgesEvent.cs		\
	TraceContourEvent.cs		\
	TransformEvent.cs		\
	TransformLayerEvent.cs		\
	TransformSelectionEvent.cs	\
	TrimEvent.cs			\
	TypeParameter.cs		\
	TwirlEvent.cs			\
	UngroupEvent.cs			\
	UnimplementedEvent.cs		\
	UnlinkEvent.cs			\
	UnsharpMaskEvent.cs		\
	VariationsEvent.cs		\
	WatercolorEvent.cs		\
	WaterPaperEvent.cs		\
	WaveEvent.cs			\
	WindEvent.cs			\
	ZigZagEvent.cs

EXTRA_DIST = $(MYSOURCES) PhotoshopActions PhotoshopActions.png

PhotoshopActions.exe : $(MYSOURCES) PhotoshopActions.png $(GIMPSHARPLIB)
	$(CSC) $(MYSOURCES) /resource:PhotoshopActions.png -out:$@ $(ASSEMBLIES)

clean:
	rm -f PhotoshopActions.exe

install:
	$(INSTALL_DATA) PhotoshopActions.exe $(DESTDIR)$(GIMPPLUGINDIR)
	$(INSTALL) PhotoshopActions $(DESTDIR)$(GIMPPLUGINDIR)
